--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+=== 0.3.0
+  Major update. Command line configurable assumptions and multiple author support.
+=== 0.2.3
 === 0.1.0 / 2012-05-05
 
 * 1 major enhancement
